# Toy-Robot-Simulator

./: CMakeLists.txt  README.md
include/commands/: Command.h  CommandParser.h  LeftCommand.h  MoveCommand.h  PlaceCommand.h  ReportCommand.h  RightCommand.h
include/core/: Robot.h  Table.h
include/utils/: Direction.h
src/: main.cpp
src/commands/: CommandParser.cpp  LeftCommand.cpp  MoveCommand.cpp  PlaceCommand.cpp  ReportCommand.cpp  RightCommand.cpp
src/core/: Robot.cpp  Table.cpp
src/utils/: Direction.cpp
test/: test_robot.cpp
